--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -54,7 +54,7 @@
             </header>
             <div id="linkContainer">
                 <div id="linkContainer1"><a href="https://eventsapi-v1.herokuapp.com/swagger/" target="_blank">- EventsAPI documentation<br></a></div>
-                <div id="linkContainer2"><a href="https://eventsapi-v1.herokuapp.com//api/calendar/" target="_blank">- EventsAPI calendar<br></a></div>
+                <div id="linkContainer2"><a href="https://eventsapi-v1.herokuapp.com/api/calendar/" target="_blank">- EventsAPI calendar<br></a></div>
                 <div id="linkContainer3"><a href="https://eventsapi-v1.herokuapp.com/api/events/" target="_blank">- EventsAPI events (Authorization needed)<br></a></div>
                 <div id="linkContainer4"><a href="https://eventsapi-v1.herokuapp.com/api/globalEvents/" target="_blank">- EventsAPI globalEvents<br></a></div>
                 <div id="linkContainer5"><a href="https://eventsapi-v1.herokuapp.com/api/auth/token" target="_blank">- EventsAPI Authorization (Calendar must be created yet)<br></a></div>
