--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -44,6 +44,9 @@
             div#linkContainer5{
                 margin-top: 1%;
             }
+            div#linkContainer6{
+                margin-top: 1%;
+            }
         </style>
 
     </head>
@@ -58,6 +61,7 @@
                 <div id="linkContainer3"><a href="https://eventsapi-v1.herokuapp.com/api/events/" target="_blank">- EventsAPI events (Authorization needed)<br></a></div>
                 <div id="linkContainer4"><a href="https://eventsapi-v1.herokuapp.com/api/globalEvents/" target="_blank">- EventsAPI globalEvents<br></a></div>
                 <div id="linkContainer5"><a href="https://eventsapi-v1.herokuapp.com/api/auth/token" target="_blank">- EventsAPI Authorization (Calendar must be created yet)<br></a></div>
+                <div id="linkContainer6"><a href="https://github.com/alvarobernal2412/EventsAPI" target="_blank">- EventsAPI github<br></a></div>
             </div>
         </div>
     </body>
